<resources>
    <string name="app_name">NEVS Mobile</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="ob_header1">SIMPLE ABROAD CALLS</string>
    <string name="ob_header2">FREE WONEP TO WONEP</string>
    <string name="ob_header3">NO HIDDEN CHARGES OR FEES</string>

    <string name="ob_get_started">GET STARTED</string>

    <string name="ob_desc1">Wonep converts international calls to local calls without WiFi or data</string>
    <string name="ob_desc2">If the person you’re calling also has Wonep the call will be entirely free</string>
    <string name="ob_desc3">We have a very small charge for non-Wonep calls to mobiles or landlines</string>


    <string name="title_1">WHAT IS NEVS?</string>
    <string name="content_1">Nigeria Education Verification System\n is a unity platform for Nigeria Education governing\n bodies, Higher Institutions, Government Agencies</string>

    <string name="title_2">Education Verification</string>
    <string name="content_2">Powered by the Federal Ministry of Education,\n The NEVS plaform provides secure exchange,  and academic \n verification for higers institutions and third parties</string>

    <string name="title_3">Student Identification</string>
    <string name="content_3">Through our National Student Enrollment Programme,\n NEVS is currently been implemented as part of a National \n Education Policy to uniquely register and identify every Nigerian student.</string>

    <string name="title_4">NEVS is Social</string>
    <string name="content_4">NEVS is actively working with institutions,\n of higher learning across Nigeria to help students collaborate\n in learning and access quality resources.</string>


    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="issue">Issue</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="device_info">Device Info</string>
    <string name="send">Send</string>
    <string name="about_classroom_app">About Classroom App</string>
    <string name="rate_me">Rate Me</string>
    <string name="application">Application</string>
    <string name="refer_classroom_app_to_your_friend">Refer Classroom App To Your Friend</string>
    <string name="share_this_app_with_friends">Share this app with friends</string>
    <string name="email_your_feedback">Email Your Feedback</string>
    <string name="tell_me_your_suggestions">Tell me your suggestions</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="tell_me_if_you_found_any_problem">Tell me if you found any problem</string>
    <string name="send_me_notifications_for_scholarships">Send me notifications for scholarships</string>
    <string name="send_me_notice_of_revalidation">Send me notice of revalidation</string>
    <string name="share_my_record_with_prospective_employers">Share my record with prospective employers</string>
    <string name="name">Name</string>
    <string name="religion">Religion</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="home_town">Home Town</string>
    <string name="sex">Sex</string>
    <string name="state_of_origin">State of origin</string>
    <string name="local_government_area">Local Government Area</string>
    <string name="email">Email</string>
    <string name="tel">Tel</string>
    <string name="street_address">Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="education_governing_body">Education Governing Body</string>
    <string name="category">Category</string>
    <string name="institution">Institution</string>
    <string name="course_department">Course/Department</string>
    <string name="academic_session">Academic Session</string>
    <string name="current_academic_level">Current Academic Level</string>
    <string name="matric">Matric #</string>
    <string name="next_of_kin">Next of Kin</string>
    <string name="address_of_next_of_kin">Address of Next of Kin</string>
    <string name="next_of_kin_phone">Next of Kin Phone #</string>
    <string name="next_of_kin_email">Next of Kin Email</string>
    <string name="email_address">email address</string>
</resources>
