<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activities.Settings">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/calibri"
                        android:paddingLeft="20dp"
                        android:paddingTop="10dp"
                        android:text="@string/about_classroom_app"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_app_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/calibri"
                        android:paddingLeft="20dp"
                        android:paddingBottom="10dp"
                        android:text="Version 1.0"
                        android:textSize="16sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/grey" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcv_rate_me"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/calibri"
                        android:paddingLeft="20dp"
                        android:paddingTop="10dp"
                        android:text="@string/rate_me"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/calibri"
                        android:paddingLeft="20dp"
                        android:paddingBottom="10dp"
                        android:text="@string/application"
                        android:textSize="16sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/grey" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcv_share_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/calibri"
                        android:paddingLeft="20dp"
                        android:paddingTop="10dp"
                        android:text="@string/refer_classroom_app_to_your_friend"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/calibri"
                        android:paddingLeft="20dp"
                        android:paddingBottom="10dp"
                        android:text="@string/share_this_app_with_friends"
                        android:textSize="16sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/grey" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcv_email_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/calibri"
                        android:paddingLeft="20dp"
                        android:paddingTop="10dp"
                        android:text="@string/email_your_feedback"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/calibri"
                        android:paddingLeft="20dp"
                        android:paddingBottom="10dp"
                        android:text="@string/tell_me_your_suggestions"
                        android:textSize="16sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/grey" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcv_report_bug"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/calibri"
                        android:paddingLeft="20dp"
                        android:paddingTop="10dp"
                        android:text="@string/report_a_bug"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/calibri"
                        android:paddingLeft="20dp"
                        android:paddingBottom="10dp"
                        android:text="@string/tell_me_if_you_found_any_problem"
                        android:textSize="16sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/grey" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcv_send_scholarship_noti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switch_scholarships"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/calibri"
                        android:paddingLeft="20dp"
                        android:paddingTop="10dp"
                        android:text="@string/send_me_notifications_for_scholarships"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/calibri"
                        android:paddingLeft="20dp"
                        android:paddingBottom="10dp"
                        android:textSize="16sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/grey" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcv_send_revalidation_notice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switch_revalidation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/calibri"
                        android:paddingLeft="20dp"
                        android:paddingTop="10dp"
                        android:text="@string/send_me_notice_of_revalidation"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/calibri"
                        android:paddingLeft="20dp"
                        android:paddingBottom="10dp"
                        android:textSize="16sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/grey" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcv_share_record"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switch_share_record"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/calibri"
                        android:paddingLeft="20dp"
                        android:paddingTop="10dp"
                        android:text="@string/share_my_record_with_prospective_employers"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/calibri"
                        android:paddingLeft="20dp"
                        android:paddingBottom="10dp"
                        android:textSize="16sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/grey" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>